# jira2md

./: .gitignore  LICENCE.md  README.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: release.sh
src/jira2md/: __init__.py  cli.py  client.py  config.py  fields.py  renderer.py
tests/: test_client.py  test_config.py  test_fields.py  test_renderer.py
